external/grok/src/lib/jp2/grok.h

typedef enum GRK_SUPPORTED_FILE_FMT
{
	GRK_UNK_FMT,
	GRK_J2K_FMT,
	GRK_JP2_FMT,
	GRK_PXM_FMT,
	GRK_PGX_FMT,
	GRK_PAM_FMT,
	GRK_BMP_FMT,
	GRK_TIF_FMT,
	GRK_RAW_FMT, 
	GRK_PNG_FMT,
	GRK_RAWL_FMT, 
	GRK_JPG_FMT
} GRK_SUPPORTED_FILE_FMT;
typedef enum _GRK_PROG_ORDER
{
	GRK_PROG_UNKNOWN = -1, 
	GRK_LRCP = 0, 
	GRK_RLCP = 1, 
	GRK_RPCL = 2, 
	GRK_PCRL = 3, 
	GRK_CPRL = 4, 
	GRK_NUM_PROGRESSION_ORDERS = 5 
} GRK_PROG_ORDER;
typedef enum _GRK_COLOR_SPACE
{
	GRK_CLRSPC_UNKNOWN = 0, 
	GRK_CLRSPC_SRGB = 2, 
	GRK_CLRSPC_GRAY = 3, 
	GRK_CLRSPC_SYCC = 4, 
	GRK_CLRSPC_EYCC = 5, 
	GRK_CLRSPC_CMYK = 6, 
	GRK_CLRSPC_DEFAULT_CIE = 7, 
	GRK_CLRSPC_CUSTOM_CIE = 8, 
	GRK_CLRSPC_ICC = 9 
} GRK_COLOR_SPACE;
typedef enum _GRK_CODEC_FORMAT
{
	GRK_CODEC_UNKNOWN = -1, 
	GRK_CODEC_J2K = 0, 
	GRK_CODEC_JP2 = 2 
} GRK_CODEC_FORMAT;
typedef struct _grk_object
{
	void* wrapper;
} grk_object;
typedef struct _grk_progression
{
	uint16_t layS;
	uint16_t layE;
	uint8_t resS;
	uint8_t resE;
	uint16_t compS;
	uint16_t compE;
	uint64_t precS;
	uint64_t precE;
	GRK_PROG_ORDER specifiedCompressionPocProg;
	GRK_PROG_ORDER progression;
	char progressionString[5];
	uint32_t tileno;
	uint32_t tx0;
	uint32_t tx1;
	uint32_t ty0;
	uint32_t ty1;
	uint16_t tpLayE;
	uint8_t tpResS;
	uint8_t tpResE;
	uint16_t tpCompS;
	uint16_t tpCompE;
	uint64_t tpPrecE;
	uint32_t tp_txS;
	uint32_t tp_txE;
	uint32_t tp_tyS;
	uint32_t tp_tyE;
	uint32_t dx;
	uint32_t dy;
	uint16_t lay_temp;
	uint8_t res_temp;
	uint16_t comp_temp;
	uint64_t prec_temp;
	uint32_t tx0_temp;
	uint32_t ty0_temp;
} grk_progression;
typedef struct _grk_raw_cparameters
{
	uint32_t width; 
	uint32_t height; 
	uint16_t numcomps; 
	uint8_t prec; 
	bool sgnd; 
	grk_raw_comp_cparameters* comps; 
} grk_raw_cparameters;
typedef struct _grk_cparameters
{
	bool tile_size_on;
	uint32_t tx0;
	uint32_t ty0;
	uint32_t t_width;
	uint32_t t_height;
	uint16_t numlayers;
	bool allocationByRateDistoration;
	double layer_rate[GRK_MAX_LAYERS];
	bool allocationByQuality;
	double layer_distortion[GRK_MAX_LAYERS];
	char* comment[GRK_NUM_COMMENTS_SUPPORTED];
	uint16_t comment_len[GRK_NUM_COMMENTS_SUPPORTED];
	bool is_binary_comment[GRK_NUM_COMMENTS_SUPPORTED];
	size_t num_comments;
	uint8_t csty;
	uint8_t numgbits;
	GRK_PROG_ORDER prog_order;
	grk_progression progression[GRK_J2K_MAXRLVLS];
	uint32_t numpocs;
	uint8_t numresolution;
	uint32_t cblockw_init;
	uint32_t cblockh_init;
	uint8_t cblk_sty;
	bool isHT;
	bool irreversible;
	int32_t roi_compno;
	uint32_t roi_shift;
	uint32_t res_spec;
	uint32_t prcw_init[GRK_J2K_MAXRLVLS];
	uint32_t prch_init[GRK_J2K_MAXRLVLS];
	char infile[GRK_PATH_LEN];
	char outfile[GRK_PATH_LEN];
	uint32_t image_offset_x0;
	uint32_t image_offset_y0;
	uint32_t subsampling_dx;
	uint32_t subsampling_dy;
	GRK_SUPPORTED_FILE_FMT decod_format;
	GRK_SUPPORTED_FILE_FMT cod_format;
	grk_raw_cparameters raw_cp;
	uint32_t max_comp_size;
	bool enableTilePartGeneration;
	uint8_t newTilePartProgressionDivider;
	uint8_t mct;
	void* mct_data;
	uint64_t max_cs_size;
	uint16_t rsiz;
	uint16_t framerate;
	bool write_capture_resolution_from_file;
	double capture_resolution_from_file[2];
	bool write_capture_resolution;
	double capture_resolution[2];
	bool write_display_resolution;
	double display_resolution[2];
	uint32_t rateControlAlgorithm;
	uint32_t numThreads;
	int32_t deviceId;
	uint32_t duration; 
	uint32_t kernelBuildOptions;
	uint32_t repeats;
	bool writePLT;
	bool writeTLM;
	bool verbose;
} grk_cparameters;
typedef struct grk_asoc
{
	uint32_t level; 
	const char* label;
	uint8_t* xml;
	uint32_t xml_len;
} grk_asoc;
typedef struct _grk_header_info
{
	uint32_t cblockw_init;
	uint32_t cblockh_init;
	bool irreversible;
	uint32_t mct;
	uint16_t rsiz;
	uint32_t numresolutions;
	uint8_t csty;
	uint8_t cblk_sty;
	uint32_t prcw_init[GRK_J2K_MAXRLVLS];
	uint32_t prch_init[GRK_J2K_MAXRLVLS];
	uint32_t tx0;
	uint32_t ty0;
	uint32_t t_width;
	uint32_t t_height;
	uint32_t t_grid_width;
	uint32_t t_grid_height;
	uint16_t numlayers;
	uint8_t* xml_data;
	size_t xml_data_len;
	size_t num_comments;
	char* comment[GRK_NUM_COMMENTS_SUPPORTED];
	uint16_t comment_len[GRK_NUM_COMMENTS_SUPPORTED];
	bool isBinaryComment[GRK_NUM_COMMENTS_SUPPORTED];
	grk_asoc asocs[GRK_NUM_ASOC_BOXES_SUPPORTED];
	uint32_t num_asocs;
} grk_header_info;
typedef struct _grk_dparameters
{
	uint8_t cp_reduce;
	uint16_t cp_layer;
	char infile[GRK_PATH_LEN];
	char outfile[GRK_PATH_LEN];
	GRK_SUPPORTED_FILE_FMT decod_format;
	GRK_SUPPORTED_FILE_FMT cod_format;
	uint32_t DA_x0;
	uint32_t DA_x1;
	uint32_t DA_y0;
	uint32_t DA_y1;
	bool m_verbose;
	uint16_t tileIndex;
	uint32_t nb_tile_to_decompress;
	uint32_t flags;
	GRK_TILE_CACHE_STRATEGY tileCacheStrategy;
} grk_dparameters;
typedef struct _grk_prec
{
	uint8_t prec;
	grk_precision_mode mode;
} grk_precision;
typedef struct _grk_decompress_params
{
	grk_dparameters core;
	char infile[GRK_PATH_LEN];
	char outfile[GRK_PATH_LEN];
	GRK_SUPPORTED_FILE_FMT decod_format;
	GRK_SUPPORTED_FILE_FMT cod_format;
	char indexfilename[GRK_PATH_LEN];
	uint32_t DA_x0;
	uint32_t DA_x1;
	uint32_t DA_y0;
	uint32_t DA_y1;
	bool m_verbose;
	uint16_t tileIndex;
	uint32_t nb_tile_to_decompress;
	grk_precision* precision;
	uint32_t nb_precision;
	bool force_rgb;
	bool upsample;
	bool split_pnm;
	bool serialize_xml;
	uint32_t compression;
	uint32_t compressionLevel;
	int32_t deviceId;
	uint32_t duration; 
	uint32_t kernelBuildOptions;
	uint32_t repeats;
	bool verbose;
	uint32_t numThreads;
} grk_decompress_parameters;
typedef grk_object grk_codec;
typedef grk_object grk_stream;
typedef struct _grk_image_comp
{
	grk_object obj;
	uint32_t dx;
	uint32_t dy;
	uint32_t w;
	uint32_t stride;
	uint32_t h;
	uint32_t x0;
	uint32_t y0;
	uint16_t Xcrg, Ycrg;
	uint8_t prec;
	bool sgnd;
	int32_t* data;
	GRK_COMPONENT_TYPE type;
	GRK_COMPONENT_ASSOC association;
} grk_image_comp;
typedef struct _grk_image_meta
{
	grk_object obj;
	grk_color color;
	uint8_t* iptc_buf;
	size_t iptc_len;
	uint8_t* xmp_buf;
	size_t xmp_len;
} grk_image_meta;
typedef struct _grk_image
{
	grk_object obj;
	uint32_t x0;
	uint32_t y0;
	uint32_t x1;
	uint32_t y1;
	uint16_t numcomps;
	GRK_COLOR_SPACE color_space;
	bool color_applied;
	bool has_capture_resolution;
	double capture_resolution[2];
	bool has_display_resolution;
	double display_resolution[2];
	grk_image_meta* meta;
	grk_image_comp* comps;
} grk_image;
typedef struct grk_plugin_tile_component
{
	size_t numResolutions;
	grk_plugin_resolution** resolutions;
} grk_plugin_tile_component;
typedef struct _grk_plugin_tile
{
	uint32_t decompress_flags;
	size_t numComponents;
	grk_plugin_tile_component** tileComponents;
} grk_plugin_tile;
GRK_API bool GRK_CALLCONV grk_decompress_tile(grk_codec* codec, uint16_t tileIndex);
GRK_API bool GRK_CALLCONV grk_decompress_end(grk_codec* codec);
GRK_API grk_codec* GRK_CALLCONV grk_compress_create(GRK_CODEC_FORMAT format, grk_stream* stream);
GRK_API void GRK_CALLCONV grk_compress_set_default_params(grk_cparameters* parameters);
GRK_API bool GRK_CALLCONV grk_compress_init(grk_codec* codec, grk_cparameters* parameters,
											grk_image* image);
GRK_API bool GRK_CALLCONV grk_compress_start(grk_codec* codec);
GRK_API bool GRK_CALLCONV grk_compress(grk_codec* codec);
GRK_API bool GRK_CALLCONV grk_compress_tile(grk_codec* codec, uint16_t tileIndex, uint8_t* data,
											uint64_t data_size);
GRK_API bool GRK_CALLCONV grk_compress_with_plugin(grk_codec* codec, grk_plugin_tile* tile);
GRK_API bool GRK_CALLCONV grk_compress_end(grk_codec* codec);
GRK_API void GRK_CALLCONV grk_dump_codec(grk_codec* codec, uint32_t info_flag, FILE* output_stream);
GRK_API bool GRK_CALLCONV grk_set_MCT(grk_cparameters* parameters, float* pEncodingMatrix,
									  int32_t* p_dc_shift, uint32_t pNbComp);
typedef struct _grk_plugin_load_info
{
	const char* pluginPath;
} grk_plugin_load_info;
GRK_API bool GRK_CALLCONV grk_plugin_load(grk_plugin_load_info info);
GRK_API void GRK_CALLCONV grk_plugin_cleanup(void);
GRK_API uint32_t GRK_CALLCONV grk_plugin_get_debug_state();
typedef struct _grk_plugin_init_info
{
	int32_t deviceId;
	bool verbose;
} grk_plugin_init_info;
GRK_API bool GRK_CALLCONV grk_plugin_init(grk_plugin_init_info initInfo);
typedef struct grk_plugin_compress_user_callback_info
{
	const char* input_file_name;
	bool outputFileNameIsRelative;
	const char* output_file_name;
	grk_cparameters* compressor_parameters;
	grk_image* image;
	grk_plugin_tile* tile;
	uint8_t* compressBuffer;
	size_t compressBufferLen;
	unsigned int error_code;
	bool transferExifTags;
} grk_plugin_compress_user_callback_info;
typedef bool (*GRK_PLUGIN_COMPRESS_USER_CALLBACK)(grk_plugin_compress_user_callback_info* info);
GRK_API int32_t GRK_CALLCONV grk_plugin_compress(grk_cparameters* compress_parameters,
												 GRK_PLUGIN_COMPRESS_USER_CALLBACK callback);
GRK_API int32_t GRK_CALLCONV grk_plugin_batch_compress(const char* input_dir,
													   const char* output_dir,
													   grk_cparameters* compress_parameters,
													   GRK_PLUGIN_COMPRESS_USER_CALLBACK callback);
GRK_API bool GRK_CALLCONV grk_plugin_is_batch_complete(void);
GRK_API void GRK_CALLCONV grk_plugin_stop_batch_compress(void);
typedef int (*GROK_INIT_DECOMPRESSORS)(grk_header_info* header_info, grk_image* image);
typedef struct _grk_plugin_decompress_callback_info
{
	size_t deviceId;
	GROK_INIT_DECOMPRESSORS init_decompressors_func;
	const char* input_file_name;
	const char* output_file_name;
	GRK_SUPPORTED_FILE_FMT decod_format;
	GRK_SUPPORTED_FILE_FMT cod_format;
	grk_stream* stream;
	grk_codec* codec;
	grk_header_info header_info;
	grk_decompress_parameters* decompressor_parameters;
	grk_image* image;
	bool plugin_owns_image;
	grk_plugin_tile* tile;
	unsigned int error_code;
	uint32_t decompress_flags;
	uint32_t full_image_x0;
	uint32_t full_image_y0;
	void* user_data;
} grk_plugin_decompress_callback_info;
typedef int32_t (*grk_plugin_decompress_callback)(grk_plugin_decompress_callback_info* info);
GRK_API int32_t GRK_CALLCONV grk_plugin_decompress(grk_decompress_parameters* decompress_parameters,
												   grk_plugin_decompress_callback callback);
GRK_API int32_t GRK_CALLCONV grk_plugin_init_batch_decompress(
	const char* input_dir, const char* output_dir, grk_decompress_parameters* decompress_parameters,
	grk_plugin_decompress_callback callback);
GRK_API int32_t GRK_CALLCONV grk_plugin_batch_decompress(void);
GRK_API void GRK_CALLCONV grk_plugin_stop_batch_decompress(void);