src/lib.rs

extern "C" {
    #[doc = " Decompress a specific tile"]
    #[doc = ""]
    #[doc = " @param\tcodec\t\t\tJPEG 2000 code stream"]
    #[doc = " @param\ttileIndex\t\tindex of the tile to be decompressed"]
    #[doc = ""]
    #[doc = " @return\t\t\t\t\ttrue if successful, otherwise false"]
    pub fn grk_decompress_tile(codec: *mut grk_codec, tileIndex: u16) -> bool;
}
extern "C" {
    #[doc = " End decompression"]
    #[doc = ""]
    #[doc = " @param\tcodec\t\t\tJPEG 2000 code stream"]
    pub fn grk_decompress_end(codec: *mut grk_codec) -> bool;
}
extern "C" {
    #[doc = " Creates a J2K/JP2 compression structure"]
    #[doc = " @param \tformat \t\tCoder to select"]
    #[doc = " @param\tstream\tthe JPEG 2000 stream."]
    #[doc = " @return \t\t\t\tReturns a handle to a compressor if successful,"]
    #[doc = " \t\t\t\t\t\treturns nullptr otherwise"]
    pub fn grk_compress_create(format: GRK_CODEC_FORMAT, stream: *mut grk_stream)
        -> *mut grk_codec;
}
extern "C" {
    #[doc = "Set compressing parameters to default values, that means :"]
    #[doc = ""]
    #[doc = "Lossless"]
    #[doc = "Single tile"]
    #[doc = "Size of precinct : 2^15 x 2^15 (i.e. single precinct)"]
    #[doc = "Size of code block : 64 x 64"]
    #[doc = "Number of resolutions: 6"]
    #[doc = "No SOP marker in the code stream"]
    #[doc = "No EPH marker in the code stream"]
    #[doc = "No sub-sampling in x or y direction"]
    #[doc = "No mode switch activated"]
    #[doc = "Progression order: LRCP"]
    #[doc = "No index file"]
    #[doc = "No ROI upshifted"]
    #[doc = "Image origin lies at (0,0)"]
    #[doc = "Tile origin lies at (0,0)"]
    #[doc = "Reversible DWT 5-3 transform"]
    #[doc = ""]
    #[doc = "@param parameters Compression parameters"]
    pub fn grk_compress_set_default_params(parameters: *mut grk_cparameters);
}
extern "C" {
    #[doc = " Set up the compressor parameters using the current image and user parameters."]
    #[doc = ""]
    #[doc = " @param codec \t\tJPEG 2000 code stream"]
    #[doc = " @param parameters \tcompression parameters"]
    #[doc = " @param image \t\tinput image"]
    pub fn grk_compress_init(
        codec: *mut grk_codec,
        parameters: *mut grk_cparameters,
        image: *mut grk_image,
    ) -> bool;
}
extern "C" {
    #[doc = " Start compressing current image."]
    #[doc = ""]
    #[doc = " @param codec \t\tCompressor handle"]
    #[doc = ""]
    pub fn grk_compress_start(codec: *mut grk_codec) -> bool;
}
extern "C" {
    #[doc = " Encode an image into a JPEG 2000 code stream"]
    #[doc = " @param codec \t\tcompressor handle"]
    #[doc = ""]
    #[doc = " @return \t\t\t\tReturns true if successful, returns false otherwise"]
    pub fn grk_compress(codec: *mut grk_codec) -> bool;
}
extern "C" {
    #[doc = " Compress uncompressed data stored in a buffer."]
    #[doc = " This method should be called right after grk_compress_start,"]
    #[doc = " and before grk_end_compress."]
    #[doc = ""]
    #[doc = " @param\tcodec\t\t    JPEG 2000 code stream"]
    #[doc = " @param\ttileIndex\t\tthe index of the tile to write. At the moment,"]
    #[doc = " \t\t\t\t\t\t\tthe tiles must be written from 0 to n-1 in sequence."]
    #[doc = " @param\tdata\t\t\tpointer to the data to write. Data is arranged in planar"]
    #[doc = "  \t\t\t\t\t\tsequence, data_comp0, data_comp1 etc,"]
    #[doc = "  \t\t\t\t\t\tThe data should NOT BE INTERLEAVED."]
    #[doc = " @param\tdata_size\t\tthis value is used to ensure the data"]
    #[doc = " \t\t\t\t\t\t\tbeing written is correct. The size must be"]
    #[doc = " \t\t\t\t\t\t\tequal to the sum for each component of"]
    #[doc = "                          tile_width * tile_height * component_size."]
    #[doc = "                          component_size can be 1 or 2 bytes, depending on"]
    #[doc = "                          the precision of the given component."]
    #[doc = ""]
    #[doc = " @return\ttrue if the data could be written."]
    pub fn grk_compress_tile(
        codec: *mut grk_codec,
        tileIndex: u16,
        data: *mut u8,
        data_size: u64,
    ) -> bool;
}
extern "C" {
    #[doc = " Encode an image into a JPEG 2000 code stream using plugin"]
    #[doc = " @param codec \t\tcompressor handle"]
    #[doc = " @param tile\t\t\tplugin tile"]
    #[doc = ""]
    #[doc = " @return \t\t\t\tReturns true if successful, returns false otherwise"]
    pub fn grk_compress_with_plugin(codec: *mut grk_codec, tile: *mut grk_plugin_tile) -> bool;
}
extern "C" {
    #[doc = " End to compress the current image."]
    #[doc = " @param codec \t\tCompressor handle"]
    pub fn grk_compress_end(codec: *mut grk_codec) -> bool;
}
extern "C" {
    #[doc = " Dump codec information to file"]
    #[doc = ""]
    #[doc = " @param\tcodec\t\t\tJPEG 2000 code stream."]
    #[doc = " @param\tinfo_flag\t\ttype of information dump."]
    #[doc = " @param\toutput_stream\toutput stream where dump the information get from the codec."]
    #[doc = ""]
    pub fn grk_dump_codec(codec: *mut grk_codec, info_flag: u32, output_stream: *mut FILE);
}
extern "C" {
    #[doc = " Set the MCT matrix to use."]
    #[doc = ""]
    #[doc = " @param\tparameters\t\tthe parameters to change."]
    #[doc = " @param\tpEncodingMatrix\tthe compressing matrix."]
    #[doc = " @param\tp_dc_shift\t\tthe dc shift coefficients to use."]
    #[doc = " @param\tpNbComp\t\t\tthe number of components of the image."]
    #[doc = ""]
    #[doc = " @return\ttrue if the parameters could be set."]
    pub fn grk_set_MCT(
        parameters: *mut grk_cparameters,
        pEncodingMatrix: *mut f32,
        p_dc_shift: *mut i32,
        pNbComp: u32,
    ) -> bool;
}
#[doc = "Plugin Interface"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_plugin_load_info {
    pub pluginPath: *const ::std::os::raw::c_char,
}
#[doc = "Plugin Interface"]
pub type grk_plugin_load_info = _grk_plugin_load_info;
extern "C" {
    #[doc = " Load plugin"]
    #[doc = ""]
    #[doc = " @param info\t\tplugin loading info"]
    pub fn grk_plugin_load(info: grk_plugin_load_info) -> bool;
}
extern "C" {
    #[doc = " Release plugin resources"]
    pub fn grk_plugin_cleanup();
}
extern "C" {
    #[doc = " Get debug state of plugin"]
    pub fn grk_plugin_get_debug_state() -> u32;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_plugin_init_info {
    pub deviceId: i32,
    pub verbose: bool,
}
pub type grk_plugin_init_info = _grk_plugin_init_info;
extern "C" {
    #[doc = " Initialize plugin"]
    pub fn grk_plugin_init(initInfo: grk_plugin_init_info) -> bool;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct grk_plugin_compress_user_callback_info {
    pub input_file_name: *const ::std::os::raw::c_char,
    pub outputFileNameIsRelative: bool,
    pub output_file_name: *const ::std::os::raw::c_char,
    pub compressor_parameters: *mut grk_cparameters,
    pub image: *mut grk_image,
    pub tile: *mut grk_plugin_tile,
    pub compressBuffer: *mut u8,
    pub compressBufferLen: usize,
    pub error_code: ::std::os::raw::c_uint,
    pub transferExifTags: bool,
}
pub type GRK_PLUGIN_COMPRESS_USER_CALLBACK = ::std::option::Option<
    unsafe extern "C" fn(info: *mut grk_plugin_compress_user_callback_info) -> bool,
>;
extern "C" {
    #[doc = " Compress with plugin"]
    #[doc = ""]
    #[doc = " @param compress_parameters \tcompress parameters"]
    #[doc = " @param callback\t\t\t\tcallback"]
    pub fn grk_plugin_compress(
        compress_parameters: *mut grk_cparameters,
        callback: GRK_PLUGIN_COMPRESS_USER_CALLBACK,
    ) -> i32;
}
extern "C" {
    #[doc = " Batch compress with plugin"]
    #[doc = ""]
    #[doc = " @param input_dir\t\t\t\tdirectory holding input images"]
    #[doc = " @param output_dir\t\t\tdirectory holding compressed output images"]
    #[doc = " @param compress_parameters \tcompress parameters"]
    #[doc = " @param callback\t\t\t\tcallback"]
    #[doc = ""]
    #[doc = " @return 0 if successful"]
    #[doc = ""]
    pub fn grk_plugin_batch_compress(
        input_dir: *const ::std::os::raw::c_char,
        output_dir: *const ::std::os::raw::c_char,
        compress_parameters: *mut grk_cparameters,
        callback: GRK_PLUGIN_COMPRESS_USER_CALLBACK,
    ) -> i32;
}
extern "C" {
    #[doc = " Check if batch job is complete"]
    pub fn grk_plugin_is_batch_complete() -> bool;
}
extern "C" {
    #[doc = " Stop batch compress"]
    pub fn grk_plugin_stop_batch_compress();
}
pub type GROK_INIT_DECOMPRESSORS = ::std::option::Option<
    unsafe extern "C" fn(
        header_info: *mut grk_header_info,
        image: *mut grk_image,
    ) -> ::std::os::raw::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_plugin_decompress_callback_info {
    pub deviceId: usize,
    pub init_decompressors_func: GROK_INIT_DECOMPRESSORS,
    pub input_file_name: *const ::std::os::raw::c_char,
    pub output_file_name: *const ::std::os::raw::c_char,
    pub decod_format: GRK_SUPPORTED_FILE_FMT,
    pub cod_format: GRK_SUPPORTED_FILE_FMT,
    pub stream: *mut grk_stream,
    pub codec: *mut grk_codec,
    pub header_info: grk_header_info,
    pub decompressor_parameters: *mut grk_decompress_parameters,
    pub image: *mut grk_image,
    pub plugin_owns_image: bool,
    pub tile: *mut grk_plugin_tile,
    pub error_code: ::std::os::raw::c_uint,
    pub decompress_flags: u32,
    pub full_image_x0: u32,
    pub full_image_y0: u32,
    pub user_data: *mut ::std::os::raw::c_void,
}
pub type grk_plugin_decompress_callback_info = _grk_plugin_decompress_callback_info;
pub type grk_plugin_decompress_callback = ::std::option::Option<
    unsafe extern "C" fn(info: *mut grk_plugin_decompress_callback_info) -> i32,
>;
extern "C" {
    #[doc = " Decompress with plugin"]
    #[doc = ""]
    #[doc = " @param decompress_parameters  decompress parameters"]
    #[doc = " @param callback  \t\t\t callback"]
    pub fn grk_plugin_decompress(
        decompress_parameters: *mut grk_decompress_parameters,
        callback: grk_plugin_decompress_callback,
    ) -> i32;
}
extern "C" {
    #[doc = " Initialize batch decompress"]
    #[doc = ""]
    #[doc = " @param input_dir input directory holding compressed images"]
    #[doc = " @param output_dir output directory holding decompressed images"]
    #[doc = " @param decompress_parameters  decompress parameters"]
    #[doc = " @param callback  \t\t\t callback"]
    #[doc = ""]
    #[doc = " @return 0 if successful"]
    pub fn grk_plugin_init_batch_decompress(
        input_dir: *const ::std::os::raw::c_char,
        output_dir: *const ::std::os::raw::c_char,
        decompress_parameters: *mut grk_decompress_parameters,
        callback: grk_plugin_decompress_callback,
    ) -> i32;
}
extern "C" {
    #[doc = " Batch decompress"]
    pub fn grk_plugin_batch_decompress() -> i32;
}
extern "C" {
    #[doc = " Stop batch decompress"]
    pub fn grk_plugin_stop_batch_decompress();
}
